docs(changelog): fix fragment heading

--- a/changelog.d/20250907-work.md
+++ b/changelog.d/20250907-work.md
@@ -1,7 +1,9 @@
-### Feat
+# Changelog
+
+## Feat
 
 - add OFF mapping script and universal example
 
-### Fix
+## Fix
 
 - **ci**: wrap workflow lines for yamllint
